<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moodPicker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/mood_picker_layout_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/dark_gray"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvmpDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/mood_picker_date_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvmpDateValue"
                    android:layout_width="137dp"
                    android:layout_height="30dp"
                    android:layout_weight="0"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/mood_picker_date_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/dark_gray"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvmpTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:minEms="6"
                    android:text="@string/mood_picker_time_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvmpTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/mood_picker_time_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/dark_gray"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvmpMoodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/mood_picker_mood_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvmpMoodValue"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/mood_picker_mood_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/bmpCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeTextType="uniform"
            android:text="@string/create"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/bmpCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <Button
            android:id="@+id/bmpCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="10dp"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeTextType="uniform"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bmpCreate"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>